--- a/styles/index.css
+++ b/styles/index.css
@@ -52,3 +52,30 @@ a::before {
     background-color: #2e6e38;
     transform:scale(1.08);
 }
+
+section {
+    width: 629px;
+    height: 184px;
+    background-color: #3A4042;
+    box-shadow: 10px 10px 0px #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    font-size: 40px;
+    font-family: 'Press Start 2P', cursive;
+    color: #62C370;
+    text-shadow: 5px 2px 0px #000;
+    text-align: center;
+    padding-bottom: 31px;
+}
+
+.btnSection {
+    display: inline-block;
+    background-color: #62C370;
+    box-shadow: 5px 5px 0 #000000;
+    padding: 18px 20px;
+}
