Create the title component

--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,12 @@ header {
     
 }
 
+.imgSection {
+    width: 1440px;
+    height: 797px;
+    position: relative;
+}
+
 h2 {
     font-size: 24px;
     font-family: 'Press Start 2P', cursive;
@@ -54,6 +60,7 @@ a::before {
 }
 
 section {
+    position: relative;
     width: 629px;
     height: 184px;
     background-color: #3A4042;
@@ -64,14 +71,6 @@ section {
     align-items: center;
 }
 
-h1 {
-    font-size: 40px;
-    font-family: 'Press Start 2P', cursive;
-    color: #62C370;
-    text-shadow: 5px 2px 0px #000;
-    text-align: center;
-    padding-bottom: 31px;
-}
 
 .btnSection {
     display: inline-block;
