--- a/components/box.css
+++ b/components/box.css
@@ -1,12 +1,11 @@
-#box {
+.box {
     display: inline-block;
-
     background-color: #3A4042;
     box-shadow: 10px 10px 0px #000;
     text-align: center;
     padding: 42px 44px;
 }
 
-#box h1 {
+.box .title {
     margin-bottom: 28px;
 }
