centralized container list skills

--- a/components/skills.css
+++ b/components/skills.css
@@ -1,6 +1,7 @@
 .skills {
     height: 740px;
     background-color: #62C370;
+    border-bottom: 10px solid #3A4042;
 }
 
 .skills .title {
@@ -10,8 +11,22 @@
     padding-top: 50px;
 }
 
+.skills .listSkills {
+    margin: 60px 0 0 235px;
+    padding: 0;
+}
+
+.skills .skillHtml {
+    list-style: none;
+    display: flex;
+    width: 430px;
+}
+
 .skills .subtitle {
     text-shadow: none;
+    font-size: 25px;
+    height: 25px;
+    padding-bottom: 16px;
 }
 
 .skills .process {
@@ -24,5 +39,4 @@
 .listSkills {
     width: 960px;
     height: 480px;
-    
 }
