create the -second variation to title

--- a/components/title.css
+++ b/components/title.css
@@ -4,3 +4,11 @@
     color: #62C370;
     text-shadow: 4px 4px 0px #000;
 }
+
+.title.-second {
+    color: #FFF;
+    text-shadow: none;
+    text-align: center;
+    padding-top: 50px;
+}
+
