--- a/components/section.css
+++ b/components/section.css
@@ -1,29 +1,30 @@
-.skills {
+.section {
     height: 740px;
     background-color: #62C370;
+    padding: 50px 0 100px 0;
     border-bottom: 10px solid #3A4042;
 }
 
 
-.skills .listSkills {
+.section .listSkills {
     margin: 60px 0 0 235px;
     padding: 0;
 }
 
-.skills .skillHtml {
+.section .skillHtml {
     list-style: none;
     display: flex;
     width: 430px;
 }
 
-.skills .subtitle {
+.section .subtitle {
     text-shadow: none;
     font-size: 25px;
     height: 25px;
     padding-bottom: 16px;
 }
 
-.skills .process {
+.section .process {
     width: 320px;
     height: 40px;
     background-color: #FFFFFF;
