--- a/components/action-header.css
+++ b/components/action-header.css
@@ -1,4 +1,4 @@
-.action {
+.action-header {
     display: inline-flex;
     align-items: center;
     color: #FFF;
@@ -8,7 +8,7 @@
     margin-right: 30px;
 }
 
-.action::before {
+.action-header::before {
     content: "";
     background-color: #62C370;
     width: 10px;
