--- a/components/wrapper-project.css
+++ b/components/wrapper-project.css
@@ -1,3 +1,14 @@
 .wrapper-project {
     display: flex;
+    flex-wrap: wrap;
+    max-width: 1152px;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-around;
+}
+
+.wrapper-project .icon-project {
+    width: 280px;
+    height: 280px;
+    box-shadow: 10px 10px 0px #FFF;
 }
