--- a/components/banner-section.css
+++ b/components/banner-section.css
@@ -1,4 +1,4 @@
-.banner {
+.banner-section {
     box-sizing: border-box;
     background-image: url(../assets/photo.png);
     background-repeat: no-repeat;
@@ -9,17 +9,17 @@
     padding-left: 90px;
 }
 
-.banner .wrapper {
+.banner-section .wrapper {
     display: flex;
     flex-direction: column;
     width: 640px;
 }
 
-.banner .box {
+.banner-section .box-section {
     margin-bottom: 40px;
 }
 
-.banner .navigation {
+.banner-section .navigation {
     display: flex;
     justify-content: space-around;
 }
