--- a/components/box-section.css
+++ b/components/box-section.css
@@ -1,4 +1,4 @@
-.box {
+.box-section {
     display: inline-block;
     background-color: #3A4042;
     box-shadow: 10px 10px 0px #000;
@@ -6,6 +6,6 @@
     padding: 42px 44px;
 }
 
-.box .title {
+.box-section .main-title {
     margin-bottom: 28px;
 }
