--- a/components/section-skills.css
+++ b/components/section-skills.css
@@ -1,10 +1,10 @@
-.section {
+.section-skills {
     height: 740px;
     background-color: #62C370;
     padding: 50px 0 100px 0;
     border-bottom: 10px solid #3A4042;
 }
 
-.section .main-title {
+.section-skills .main-title {
     margin-bottom: 60px;
 }
