--- a/components/main-button.css
+++ b/components/main-button.css
@@ -1,4 +1,4 @@
-.button {
+.main-button {
     display: inline-block;
     background-color: #62C370;
     box-shadow: 5px 5px 0 #000000;
@@ -10,13 +10,13 @@
     text-decoration: none;
 }
 
-.button:hover {
+.main-button:hover {
     cursor: pointer;
     background-color: #2e6e38;
     transform:scale(1.08);
 }
 
-.button.-section:hover {
+.main-button.-section:hover {
     transform: none;
     background-color: #62C370;
 }
