--- a/components/main-section.css
+++ b/components/main-section.css
@@ -19,3 +19,17 @@
     margin-bottom: 50px;
 }
 
+.main-section.-about {
+    background-color: #4C5B84;
+    
+}
+
+.main-section.-about .about-text {
+    max-width: 1280px;
+    font-size: 30px;
+    font-family: "Fira Code", Arial, Helvetica, sans-serif;
+    color: #fff;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+}
