--- a/components/main-title.css
+++ b/components/main-title.css
@@ -1,5 +1,5 @@
 .main-title {
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Press Start 2P', sans-serif;
     font-size: 40px;
     color: #62C370;
     text-shadow: 4px 4px 0px #000;
