create components main carousel

--- a/components/wrapper-card.css
+++ b/components/wrapper-card.css
@@ -1,7 +1,4 @@
 .wrapper-card {
     display: flex;
-    flex-wrap: wrap;
-    max-width: 1152px;
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: space-around;
 }
