--- a/components/node-card.css
+++ b/components/node-card.css
@@ -6,9 +6,10 @@
 }
 
 .node-card::before {
-    position: absolute;
-    box-sizing: border-box;
     content: '';
+    position: absolute;
+    bottom: 0;
+    box-sizing: border-box;
     height: 0px;
     width: 40px;
     border-top: 2.5px dashed #000;
@@ -32,4 +33,12 @@
     padding-left: 20px;
     padding-right: 20px;
     background-color: #CEB02A;
+}
+
+.node-card.-clean .logo {
+    padding: 0;
+}
+
+.node-card.-first .logo {
+    background-color: #F25A70;
 }
