create components main section -contact

--- a/components/main-section.css
+++ b/components/main-section.css
@@ -21,6 +21,9 @@
 
 .main-section.-about {
     background-color: #4C5B84;
-    
+    border-bottom: 10px solid #000;
 }
 
+.main-section.-contact {
+    background-color: #3A4042;
+}
