--- a/components/main-description.css
+++ b/components/main-description.css
@@ -2,6 +2,7 @@
     max-width: 1280px;
     font-size: 30px;
     line-height: 1.3;
+    padding-top: 20px;
     color: #fff;
     display: flex;
     margin-left: auto;
