create main-label component

--- a/components/form-contact.css
+++ b/components/form-contact.css
@@ -1,8 +1,15 @@
 .form-contact {
     max-width: 1360px;
     height: 675px;
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     margin-left: auto;
     margin-right: auto;
+}
+
+.form-contact .wrap-form {
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
