--- a/components/icon-close.css
+++ b/components/icon-close.css
@@ -1,11 +1,19 @@
 .icon-close {
-    font-family: 'Press Start 2P', sans-serif;
-    color: #fff;
-    text-decoration: none;
-    font-size: 35px;
-
-    transition: transform 100ms linear;
+    display: none;
 }
+
+@media (max-width: 1100px) {
+    .icon-close {
+        display: block;
+        font-family: 'Press Start 2P', sans-serif;
+        color: #fff;
+        text-decoration: none;
+        font-size: 35px;
+    
+        transition: transform 100ms linear;
+    }
+}
+
 
 .icon-close:hover {
     transform: scale(1.4);
