--- a/components/main-description.css
+++ b/components/main-description.css
@@ -1,10 +1,11 @@
 .main-description {
     max-width: 1280px;
-    font-size: 30px;
+    font-size: 35px;
     line-height: 1.3;
     padding-top: 20px;
     color: #fff;
     display: flex;
     margin-left: auto;
     margin-right: auto;
+    text-align: justify;
 }
