--- a/components/main-section.css
+++ b/components/main-section.css
@@ -20,7 +20,7 @@
 }
 
 .main-section.-about {
-    background-color: #4C5B84;
+    background-color: #2C3E50;
     border-bottom: 10px solid #000;
 }
 
