change logo card-project.-green

--- a/components/card-project.css
+++ b/components/card-project.css
@@ -16,3 +16,14 @@
     width: 120px;
     height: 80px;
 }
+
+.card-project.-green {
+    background-color: #62c370;
+}
+
+.card-project.-green a {
+    font-size: 18px;
+    font-family: 'Press Start 2P', cursive;
+    color: #FFF;
+    text-shadow: 4px 4px 0px #000;
+}
