--- a/components/main-subtitle.css
+++ b/components/main-subtitle.css
@@ -3,6 +3,7 @@
     font-family: 'Press Start 2P', cursive;
     color: #FFF;
     text-shadow: 4px 4px 0px #000;
+    text-decoration: none;
 }
 
 .main-subtitle.-logoproject {
