--- a/components/form-contact.css
+++ b/components/form-contact.css
@@ -13,3 +13,10 @@
     display: flex;
     flex-direction: column;
 }
+
+.span-required{
+    font-size: 14px;
+    margin: 3px 0 0 1px;
+    color: red;
+    display: none;
+}
