--- a/components/main-title.css
+++ b/components/main-title.css
@@ -1,6 +1,6 @@
 .main-title {
     font-family: 'Press Start 2P', sans-serif;
-    font-size: 40px;
+    font-size: 4.0rem;
     color: #62C370;
     text-shadow: 4px 4px 0px #000;
 }
@@ -12,6 +12,6 @@
 }
 
 .main-title.-thanks {
-    font-size: 32px;
+    font-size: 3.2rem;
     margin-bottom: 20px;
 }
