--- a/components/action-header.css
+++ b/components/action-header.css
@@ -2,7 +2,7 @@
     display: inline-flex;
     align-items: center;
     color: #FFF;
-    font-size: 20px;
+    font-size: 2.0rem;
     font-weight: 500;
     text-decoration: none;
     margin-right: 30px;
