--- a/components/icon-close.css
+++ b/components/icon-close.css
@@ -8,7 +8,7 @@
         font-family: 'Press Start 2P', sans-serif;
         color: #fff;
         text-decoration: none;
-        font-size: 35px;
+        font-size: 3.5rem;
     
         transition: transform 100ms linear;
     }
