--- a/components/main-button.css
+++ b/components/main-button.css
@@ -5,7 +5,7 @@
     padding: 18px 20px;
     margin-right: 0;
     transition: transform 100ms linear;
-    font-size: 20px;
+    font-size: 2.0rem;
     color: #FFF;
     text-decoration: none;
 }
