--- a/components/main-description.css
+++ b/components/main-description.css
@@ -1,6 +1,6 @@
 .main-description {
     max-width: 1280px;
-    font-size: 35px;
+    font-size: 3.5rem;
     line-height: 1.3;
     padding-top: 20px;
     color: #fff;
