--- a/components/main-label.css
+++ b/components/main-label.css
@@ -1,6 +1,6 @@
 .main-label {
     color: #FFF;
-    font-size: 30px;
+    font-size: 3.0rem;
     font-weight: 300;
-    line-height: 40px;
+    line-height: 4.0rem;
 }
