--- a/components/main-subtitle.css
+++ b/components/main-subtitle.css
@@ -1,5 +1,5 @@
 .main-subtitle {
-    font-size: 24px;
+    font-size: 2.4rem;
     font-family: 'Press Start 2P', cursive;
     color: #FFF;
     text-shadow: 4px 4px 0px #000;
@@ -7,7 +7,7 @@
 }
 
 .main-subtitle.-logoproject {
-    font-size: 18px;    
+    font-size: 1.8rem;    
 }
 
 .main-subtitle.-thanks {
