--- a/components/node-card.css
+++ b/components/node-card.css
@@ -19,7 +19,7 @@
 
 .node-card .title {
     font-family: 'Press Start 2P', sans-serif;
-    font-size: 25px;
+    font-size: 2.5rem;
     font-weight: 400;
     color: #F25A70;
     margin-bottom: 50px;
