--- a/components/skill-tec.css
+++ b/components/skill-tec.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     font-family: 'Press Start 2P', cursive;
-    font-size: 25px;
+    font-size: 2.5rem;
     color: #FFF;
 }
 
