--- a/components/section-hero.css
+++ b/components/section-hero.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     position: relative;
     width: 100%;
     height: 790px;
