--- a/components/form-contact.css
+++ b/components/form-contact.css
@@ -1,5 +1,5 @@
 .form-contact {
-    max-width: 1360px;
+    max-width: 1280px;
     height: 675px;
     position: relative;
     display: flex;
@@ -9,12 +9,13 @@
 }
 
 .form-contact .wrap-form {
+    overflow: hidden;
     position: relative;
     display: flex;
     flex-direction: column;
 }
 
-.span-required{
+.span-required {
     font-size: 1.4rem;
     margin: 3px 0 0 1px;
     color: red;
