--- a/components/main-button.css
+++ b/components/main-button.css
@@ -3,7 +3,6 @@
     background-color: #62C370;
     box-shadow: 5px 5px 0 #000000;
     padding: 18px 20px;
-    margin-right: 0;
     transition: transform 100ms linear;
     font-size: 2.0rem;
     color: #FFF;
@@ -23,8 +22,9 @@
 }
 
 .main-button.-contact {
-    width: 1360px;
+    width: 1280px;
     height: 60px;
     transform: none;
     margin-top: 25px;
+    text-align: center;
 }
