--- a/components/responsive.css
+++ b/components/responsive.css
@@ -1,6 +1,7 @@
 @media (max-width: 1200px) {
     .main-banner .main-box {
-        width: 400px;
+        box-sizing: border-box;
+        width: 460px;
         margin-left: 62px;
         margin-right: 62px;
     }
@@ -83,6 +84,7 @@
 
     .wrapper-skill .skill-tec {
         margin: 0;
+        padding-bottom: 10px;
     }
 
     .wrapper-skill .skill-tec:nth-child(odd) {
@@ -123,7 +125,39 @@
 }
 
 @media (max-width: 480px) {
-    
+
+    .section-hero .wrapper {
+        padding-bottom: 20px;
+    }
+    .section-hero .main-box {
+        width: 400px;
+    }
+
+    .main-section.-project {
+        padding-top: 0;
+    }
+
+    .main-section.-project .wrapper-card {
+        flex-direction: column;
+        align-items: center;
+        margin-top: -30px;
+    }
+
+    .wrapper-card .card-project {
+        width: 190px;
+        height: 140px;
+        margin-bottom: 20px;
+    }
+
+    .main-section.-about .main-description {
+        font-size: 2.2rem;
+        padding: 30px;
+    }
+
+    .main-section.-contact .wrap-form {
+        padding: 0 30px 30px 30px;
+    }
+
 }
 
 @media (max-width: 320px) {
