add responsive main-header in 1024px

--- a/components/responsive.css
+++ b/components/responsive.css
@@ -43,6 +43,18 @@
 }
 
 @media (max-width: 1024px) {
+    .main-subtitle {
+        font-size: 1.8rem;
+    }
+
+    .action-header {
+        font-size: 1.6rem;
+    }
+    
+    .main-button {
+        padding: 15px 15px;
+    }
+
     .section-hero {
         padding: 40px;
     }
