--- a/components/main-header.css
+++ b/components/main-header.css
@@ -3,8 +3,15 @@
     align-items: center;
     justify-content: space-between;
     background-color: #3A4042;
+    box-sizing: border-box;
     border-bottom: 10px solid #2c3131;
     padding: 10px 20px;
     
 }
 
+#menu {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    padding: 0;
+}
