--- a/components/main-header.css
+++ b/components/main-header.css
@@ -9,9 +9,14 @@
     
 }
 
-#menu {
+.menu-section {
+    display: flex;
+}
+
+.wrapper-menu {
     list-style: none;
     display: flex;
     align-items: center;
     padding: 0;
 }
+
