--- a/components/responsive.css
+++ b/components/responsive.css
@@ -43,17 +43,22 @@
 }
 
 @media (min-width: 1024px) {
-    .main-header > .icon-menu {
+    .menu-section > .icon-menu {
         display: none;
     }
+
+    .nav .icon-close {
+        display: none;
+    }
+
 }
 
 @media (max-width: 1024px) {
-    #menu {
+    .wrapper-menu {
         display: none;
     }
 
-    .main-header > .icon-menu {
+    .wrapper-menu > .icon-menu {
         position: absolute;
         top: 16px;
         right: 16px;
@@ -88,26 +93,17 @@
 }
 
 @media (min-width: 980px) {
-    .main-header .icon-close {
+    .nav .icon-close {
         display: none;
     }
 }
 
 @media (max-width: 980px) {
 
-    .nav.on {
-        position: absolute;
-        top: 0;
-        left: 0;
-
-        width: 100vw;
-        height: 100vh;
-        background-color: rgb(103, 94, 94);
-        z-index: 10;
-
-        /* display: flex;
+    .menu-section.on {
+        display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
         gap: 20px;
         position: fixed;
         top: 0;
@@ -116,23 +112,41 @@
         box-sizing: border-box;
         width: 100%;
         height: 100%;
-        padding: 16px; */
+        padding: 16px;
+        
+
+        z-index: 10;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
     } 
 
-    .nav.on .menu-section {
-        
+    .menu-section.on .wrapper-menu {
+        display: block;
+        text-align: center;
+    }
+    
+    .menu-section.on .icon-menu {
+        display: none;
     }
 
-    .main-header .menu-header {
-        /* display: none; */
+    .menu-section.on .icon-close {
+        display: block;
+        cursor: pointer;
     }
 
 
-    .main-header .action-header {
-        display: flex;
+    .wrapper-menu .action-header {
+        margin: 0;
+        margin-bottom: 20px;
+        font-size: 3rem;
+        transition-duration: 0.5s;
     }
+
 
     .main-header .icon-close {
+        display: none;
         position: absolute;
         top: 16px;
         right: 16px;
@@ -210,6 +224,9 @@
 }
 
 @media (max-width: 480px) {
+    .main-header .main-subtitle {
+        font-size: 1.6rem;
+    }
 
     .section-hero .wrapper {
         padding-bottom: 20px;
@@ -247,6 +264,10 @@
 }
 
 @media (max-width: 320px) {
+    .main-header .main-subtitle {
+        font-size: 1.4rem;
+    }
+
     .section-hero .main-box {
         width: 260px;
     }
@@ -293,37 +314,3 @@
     }
 }
 
-/* 0 - 1100 */
-/* @media (max-width: 1100px) {
-    .main-header > .menu {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #000;
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    padding: 16px;
-    }
-
-    .main-header .action-header {
-        display: flex;
-    }
-
-    .main-header .icon-close {
-        position: absolute;
-        top: 16px;
-        right: 16px;
-    }
-}
-
-/* 1100 - até aonde dá pra cima */
-/* @media (min-width: 1100px) {
-    .main-header > .icon-menu {
-        display: none;
-    }
-} */
