--- a/components/responsive.css
+++ b/components/responsive.css
@@ -55,13 +55,11 @@
 
 @media (max-width: 1024px) {
     .wrapper-menu {
-        display: none;
+        display: flex;
     }
 
-    .wrapper-menu > .icon-menu {
-        position: absolute;
-        top: 16px;
-        right: 16px;
+    .menu-section > .icon-menu {
+        display: none;
     }
     
 
@@ -96,9 +94,17 @@
     .nav .icon-close {
         display: none;
     }
+    
 }
 
 @media (max-width: 980px) {
+    .wrapper-menu {
+        display: none;
+    }
+
+    .menu-section > .icon-menu {
+        display: block;
+    }
 
     .menu-section.on {
         display: flex;
@@ -151,6 +157,33 @@
         top: 16px;
         right: 16px;
     }
+
+    .main-section .wrapper-skill {
+        position: relative;
+        margin-left: 30px;
+        margin-right: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .wrapper-skill .skill-tec {
+        margin: 0;
+        padding-bottom: 20px;
+    }
+
+    .wrapper-skill .skill-tec:nth-child(odd) {
+        margin: 0;
+    }
+
+    .wrapper-skill .icon {
+        width: 70px;
+        height: 70px;
+    }
+
+    .wrapper-skill .right {
+        font-size: 2rem;
+    }
 }
 
 @media (max-width: 768px) {
@@ -194,11 +227,6 @@
         height: 60px;
     }
 
-    .wrapper-skill .right {
-        font-size: 2.0rem;
-    }
-
-
     .wrapper-card .card-project {
         width: 200px;
         height: 240px;
@@ -223,22 +251,7 @@
 
 }
 
-@media (max-width: 480px) {
-    .main-header .main-subtitle {
-        font-size: 1.6rem;
-    }
-
-    .section-hero .wrapper {
-        padding-bottom: 20px;
-    }
-    .section-hero .main-box {
-        width: 400px;
-    }
-
-    .main-section.-project {
-        padding-top: 0;
-    }
-
+@media (max-width: 610px) {
     .main-section.-project .wrapper-card {
         flex-direction: column;
         align-items: center;
@@ -249,6 +262,27 @@
         width: 190px;
         height: 140px;
         margin-bottom: 20px;
+    }
+
+    .main-section.-about .main-description {
+        font-size: 2.4rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .main-header .main-subtitle {
+        font-size: 1.6rem;
+    }
+
+    .section-hero .wrapper {
+        padding-bottom: 20px;
+    }
+    .section-hero .main-box {
+        width: 360px;
+    }
+
+    .main-section.-project {
+        padding-top: 0;
     }
 
     .main-section.-about .main-description {
