--- a/components/responsive.css
+++ b/components/responsive.css
@@ -98,6 +98,10 @@
 }
 
 @media (max-width: 980px) {
+    .main-title.-thanks {
+        font-size: 2.4rem;
+    }
+    
     .wrapper-menu {
         display: none;
     }
@@ -252,6 +256,10 @@
 }
 
 @media (max-width: 610px) {
+    .main-title.-thanks {
+        font-size: 1.8rem;
+    }
+
     .main-section.-project .wrapper-card {
         flex-direction: column;
         align-items: center;
@@ -270,6 +278,10 @@
 }
 
 @media (max-width: 480px) {
+    .main-title.-thanks {
+        font-size: 1.6rem;
+    }
+
     .main-header .main-subtitle {
         font-size: 1.6rem;
     }
@@ -298,6 +310,14 @@
 }
 
 @media (max-width: 320px) {
+    .main-title.-thanks {
+        font-size: 1rem;
+    }
+
+    .main-subtitle.-thanks {
+        font-size: 1rem;
+    }
+
     .main-header .main-subtitle {
         font-size: 1.4rem;
     }
